kubernetes/app_dep.yaml
apiVersion: v1 
kind: Namespace
metadata:
   name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: sumoo.azurecr.io/app:v1    #Image from ACR
        ports:
        - containerPort: 8080
---
apiVersion: v1 
kind: Service
metadata:
   name: app-service
   namespace: prod
spec: 
  selector: 
     app: my-app   
  type: ClusterIP   
  ports:
  -  port: 8080
     targetPort: 8080
     name: app-port
     protocol: TCP
