kubernetes/nginx_dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend-app-container
        image: sumoo.azurecr.io/onginx:latest    #Image from ACR
        ports:
        - containerPort: 80
---
apiVersion: v1 
kind: Service
metadata:
   name: frontend-service
   namespace: prod
spec: 
  selector: 
     app: frontend-app   
  type: ClusterIP
  ports:
  -  port: 8080
     target_port: 80
     name: app
---
