kubernetes/ingress.yaml
#https://learn.microsoft.com/en-us/azure/aks/app-routing?tabs=without-osm#enable-web-application-routing-via-the-azure-cli
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: aaa.koreasouth.cloudapp.azure.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service-nginx
                port:
                  number: 8080
          - path: /saveData
            pathType: Prefix
            backend:
              service:
                name: nginx1
                port:
                  number: 8080
